--- a/Zen/src/index.html
+++ b/Zen/src/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <header>
-      <button id="menu">&#xE700;</button>
+      <button id="status">&#xF83F;</button>
       <button id="dbg">&#xE945;</button>
       <button id="run">&#xE768;</button>
     </header>
@@ -17,7 +17,7 @@
       <div id="numbers">
         <span></span>
       </div>
-      <textarea id="editor" spellcheck="false" readonly></textarea>
+      <textarea id="editor" spellcheck="false" readonly placeholder="//Code"></textarea>
     </div>
     <div class="command">
       <input type="text" id="input" placeholder="Input">
