Added debug console

--- a/Zen/src/index.html
+++ b/Zen/src/index.html
@@ -9,10 +9,10 @@
   </head>
   <body>
     <header>
-      <button id="status">&#xF83F;</button>
-      <button id="dbg">&#xE945;</button>
-      <button id="run">&#xE768;</button>
+      <button id="dbg"><span id="status">&#xF83F;</span>&#xEBE8;</button>
+      <button id="run" unselectable>&#xE768;</button>
     </header>
+    <textarea id="consol"></textarea>
     <div id="textcontainer">
       <div id="numbers">
         <span></span>
