--- a/Zen/src/index.html
+++ b/Zen/src/index.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <header>
+      <img src="assets/logo.png" id="logo">
       <button id="dbg"><span id="status">&#xF83F;</span>&#xEBE8;</button>
       <button id="refresh" unselectable>&#xE72C;</button>
       <button id="run" unselectable>&#xE768;</button>
@@ -17,7 +18,7 @@
       <div id="numbers">
         <span></span>
       </div>
-      <div id="editor" spellcheck="false" readonly placeholder="//Code"></div>
+      <div id="editor" spellcheck="false" readonly></div>
     </div>
     <div class="command">
       <input type="text" id="input" placeholder="Input" autocapitalize="off" spellcheck="false" autocomplete="off">
