--- a/Zen/src/index.html
+++ b/Zen/src/index.html
@@ -10,9 +10,14 @@
     <header>
       <img src="assets/logo.png" id="logo">
       <button id="dbg"><span id="status">&#xF83F;</span>&#xEBE8;</button>
-      <button id="refresh" unselectable>&#xE72C;</button>
+      <button id="refresh" unselectable>&#xF4A5;</button>
       <button id="run" unselectable>&#xE768;</button>
     </header>
+    <div id="panel">
+      <li>&#xE946; About</li>
+      <li>&#xE943; Contribute</li>
+      <li id="reload">&#xE72C; Refresh</li>
+    </div>
     <textarea id="consol"></textarea>
     <div id="textcontainer">
       <div id="numbers">
