Added github link

--- a/Zen/src/index.html
+++ b/Zen/src/index.html
@@ -15,7 +15,7 @@
     </header>
     <div id="panel">
       <li>&#xE946; About</li>
-      <li>&#xE943; Contribute</li>
+      <li><a href="https://github.com/MatthewZenn/Zen">&#xE943; Contributea</a></li>
       <li id="reload">&#xE72C; Refresh</li>
     </div>
     <textarea id="consol"></textarea>
