renamed to Mobius

--- a/Mobius/www/index.html
+++ b/Mobius/www/index.html
@@ -25,10 +25,10 @@
       </div>
       <div id="editor" spellcheck="false" readonly></div>
     </div>
-    <div class="command">
+    <div id="command">
       <input type="text" id="input" placeholder="Input" autocapitalize="off" spellcheck="false" autocomplete="off">
       <button id="send">&#xE724;</button>
     </div>
-    <script src="js/index.js" async defer></script>
+    <scriptsrc="js/index.js" async defer></script>
   </body>
 </html>
