--- a/Mobius/www/index.html
+++ b/Mobius/www/index.html
@@ -10,12 +10,13 @@
     <header>
       <img src="assets/logo.png" id="logo">
       <button id="dbg" unselectable><span id="status">&#xF83F;</span>&#xEBE8;</button>
-      <button id="refresh">&#xF4A5;</button>
+      <button id="refresh">&#xE945;</button>
       <button id="run" unselectable>&#xE768;</button>
     </header>
     <div id="panel">
       <li>&#xE946; About</li>
       <li><a href="https://github.com/MatthewZenn/Zen">&#xE943; Contribute</a></li>
+      <li id="theme">&#xE793; Theme</li>
       <li id="reload">&#xE72C; Refresh</li>
     </div>
     <textarea id="consol"></textarea>
@@ -23,7 +24,7 @@
       <div id="numbers">
         <span></span>
       </div>
-      <div id="editor" spellcheck="false" readonly></div>
+      <textarea id="editor" spellcheck="false" readonly></textarea>
     </div>
     <div id="command">
       <input type="text" id="input" placeholder="Input" autocapitalize="off" spellcheck="false" autocomplete="off">
